Remove uses of deprecated Integer constructor
This change has been generated by the following script in the java
folder

  for file in `git grep 'new Integer(' | cut -f 1 -d':' | sort | uniq`; do
    sed 's/new Integer(/Integer.valueOf(/g' -i $file
  done

This has been doubled by a review of the change to remove the useless
(un)boxing instances.